# fty-common-messagebus

./: CMakeLists.txt
fty/messagebus/: dispatcher.h  exception.h  interface.h  message.h
src/: interface.cpp  malamute.cpp  malamute.h
